--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.8.7",
     "swiper": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "18.6.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/react-scroll": "^1.8.4",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
     "sass": "^1.54.4",
