--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "next": "12.2.4",
     "next-redux-wrapper": "^7.0.5",
     "prettier": "^2.7.1",
@@ -26,7 +27,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "swiper": "^8.3.2",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "^4.0.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -39,6 +41,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "@types/universal-cookie": "^3.0.0",
+    "@types/yup": "^0.32.0",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
     "sass": "^1.54.4",
