--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.2.4",
     "next-redux-wrapper": "^7.0.5",
     "prettier": "^2.7.1",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/next-redux-wrapper": "^3.0.0",
     "@types/node": "18.6.5",
     "@types/react": "18.0.17",
