--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
+    "framer-motion": "^7.2.1",
     "jsonwebtoken": "^8.5.1",
     "next": "12.2.4",
     "next-redux-wrapper": "^7.0.5",
