--- a/package.json
+++ b/package.json
@@ -45,9 +45,12 @@
     "@types/redux-thunk": "^2.1.0",
     "@types/universal-cookie": "^3.0.0",
     "@types/yup": "^0.32.0",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
+    "postcss": "^8.4.16",
     "sass": "^1.54.4",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
 }
