--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.8.5",
+    "@stripe/react-stripe-js": "^1.14.1",
+    "@stripe/stripe-js": "^1.42.0",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "framer-motion": "^7.2.1",
     "jsonwebtoken": "^8.5.1",
-    "next": "12.2.4",
+    "next": "13.0.0",
     "next-redux-wrapper": "^7.0.5",
     "prettier": "^2.7.1",
     "react": "18.2.0",
@@ -47,7 +49,7 @@
     "@types/yup": "^0.32.0",
     "autoprefixer": "^10.4.12",
     "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4",
+    "eslint-config-next": "13.0.0",
     "postcss": "^8.4.16",
     "sass": "^1.54.4",
     "tailwindcss": "^3.1.8",
