--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-redux-wrapper": "^7.0.5",
     "prettier": "^2.7.1",
     "react": "18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2",
     "react-scroll": "^1.8.7",
@@ -40,6 +41,7 @@
     "@types/next-redux-wrapper": "^3.0.0",
     "@types/node": "18.6.5",
     "@types/react": "18.0.17",
+    "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "18.0.6",
     "@types/react-redux": "^7.1.24",
     "@types/react-scroll": "^1.8.4",
