--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@next/font": "^13.1.6",
     "@reduxjs/toolkit": "^1.8.5",
     "@stripe/react-stripe-js": "^1.14.1",
     "@stripe/stripe-js": "^1.42.0",
@@ -20,7 +21,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^7.2.1",
     "jsonwebtoken": "^8.5.1",
-    "next": "13.0.0",
+    "next": "^13.1.6",
     "next-redux-wrapper": "^7.0.5",
     "prettier": "^2.7.1",
     "react": "18.2.0",
